examples/test/testpolicy17150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17150
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key43: value40
      key1: value48
      key39: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value36
      podSelector:
        matchLabels:
          key39: value18
          key6: value3
